# sigtrace

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: README.md  generate.sh
src/: blur.rs  contour.rs  fit.rs  lib.rs  main.rs  pgm.rs  resize.rs
